<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    tools:context=".RunningOperation" >

    <!--
         The primary full-screen view. This can be replaced with whatever view
         is needed to present your content, e.g. VideoView, SurfaceView,
         TextureView, etc.
    -->

    <!--
         This FrameLayout insets its children based on system windows using
         android:fitsSystemWindows.
    -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" >

        <GridLayout
            android:layout_width="fill_parent"
            android:layout_height="111dp"
            android:columnCount="3"
            android:rowCount="1" >

            <ImageView
                android:id="@+id/logoEnsiImageView"
                android:layout_width="175dp"
                android:layout_height="match_parent"
                android:layout_column="0"
                android:layout_gravity="left|top"
                android:layout_row="0"
                android:background="#FFFFFF"
                android:contentDescription="@string/logo_ensi"
                android:src="@drawable/logoensi" />

            <ImageView
                android:id="@+id/logoUCBNImageView"
                android:layout_width="355dp"
                android:layout_height="match_parent"
                android:layout_column="1"
                android:layout_gravity="left|top"
                android:layout_row="0"
                android:background="#FFFFFF"
                android:contentDescription="@string/logo_ucbn"
                android:src="@drawable/logoucbn" />

            <ImageView
                android:id="@+id/logoDieboldImageView"
                android:layout_width="450dp"
                android:layout_height="match_parent"
                android:layout_column="2"
                android:layout_gravity="left|top"
                android:layout_row="0"
                android:background="#FFFFFF"
                android:contentDescription="@string/logo_diebold"
                android:src="@drawable/logodiebold" />
        </GridLayout>

        <Space
            android:layout_width="wrap_content"
            android:layout_height="120dp" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:background="@drawable/black_and_white_gradient"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/textView1"
                android:layout_width="500dp"
                android:layout_height="150dp"
                android:layout_gravity="center_horizontal"
                android:text="@string/test"
                android:textColor="#000000"
                android:textColorHint="#000000"
                android:textSize="30sp" />


            <ImageView
                android:id="@+id/phoneLogoImageView"
                android:layout_width="150dp"
                android:layout_height="match_parent"
                android:contentDescription="@string/logo_phone"
                android:src="@drawable/phone" />

        </LinearLayout>
    </LinearLayout>

</FrameLayout>
