<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    tools:context=".MainActivity" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical" >

        <GridLayout
            android:layout_width="fill_parent"
            android:layout_height="111dp"
            android:columnCount="3"
            android:rowCount="1" >

            <ImageView
                android:id="@+id/logoEnsiImageView"
                android:layout_width="175dp"
                android:layout_height="match_parent"
                android:layout_column="0"
                android:layout_gravity="left|top"
                android:layout_row="0"
                android:background="#FFFFFF"
                android:contentDescription="@string/logo_ensi"
                android:src="@drawable/logoensi" />

            <ImageView
                android:id="@+id/logoUCBNImageView"
                android:layout_width="355dp"
                android:layout_height="match_parent"
                android:layout_column="1"
                android:layout_gravity="left|top"
                android:layout_row="0"
                android:background="#FFFFFF"
                android:contentDescription="@string/logo_ucbn"
                android:src="@drawable/logoucbn" />

            <ImageView
                android:id="@+id/logoDieboldImageView"
                android:layout_width="450dp"
                android:layout_height="match_parent"
                android:layout_column="2"
                android:layout_gravity="left|top"
                android:layout_row="0"
                android:background="#FFFFFF"
                android:contentDescription="@string/logo_diebold"
                android:src="@drawable/logodiebold" />
        </GridLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/black_and_white_gradient" >

            <ImageView
                android:id="@+id/imageView1"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="123dp"
                android:src="@drawable/secteur8" />

            <TextView
                android:id="@+id/textView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="22dp"
                android:text="@string/bienvenue"
                android:textColor="#000000"
                android:textSize="40sp" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignRight="@+id/textView1"
                android:layout_below="@+id/textView1"
                android:layout_marginRight="27dp"
                android:text="@string/welcome"
                android:textColor="#000000"
                android:textSize="25sp"
                android:textStyle="italic" />

            <TextView
                android:id="@+id/dateTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/textView1"
                android:layout_below="@+id/textView2"
                android:layout_marginLeft="54dp"
                android:layout_marginTop="50dp"
                android:text="aaaa"
                android:textSize="20sp"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignTop="@+id/textView3"
                android:layout_toLeftOf="@+id/textView3"
                android:src="@drawable/ic_launcher" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_toRightOf="@+id/imageView1"
                android:paddingBottom="30dp"
                android:text="Ce distributeur est\ncompatible HandiGab."
                android:textStyle="italic" />

        </RelativeLayout>

        <Space
            android:layout_width="wrap_content"
            android:layout_height="120dp" />
    </LinearLayout>

</FrameLayout>